# zipit

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: fs.rs  futures.rs  hyper.rs
src/: lib.rs  main.rs
