[package]
name = "zipit"
version = "0.1.0"
edition = "2021"
authors = ["Scotow <contact@scotow.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/zipit"
repository = "https://github.com/scotow/zipit"
homepage = "https://github.com/scotow/zipit"
description = "Create and stream a Zip archive into an AsyncWrite"
categories = ["zip", "archive", "asynchronous"]
keywords = ["io", "async", "non-blocking", "futures", "zip", "archive"]

[dependencies]
tokio = { version = "1.13", default-features = false, features = ["io-util"] }
crc32fast = "1.2"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.6", default-features = false, features = ["io"] }
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "server", "stream"] }

[features]
chrono-datetime = ["chrono"]

[[example]]
name = "hyper"
path = "examples/hyper.rs"
required-features = ["chrono-datetime"]
