[package]
name = "zipit"
version = "0.3.1"
edition = "2021"
authors = ["Scotow <contact@scotow.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/zipit"
repository = "https://github.com/scotow/zipit"
homepage = "https://github.com/scotow/zipit"
description = "Create and stream a Zip archive into an AsyncWrite"
categories = ["compression", "asynchronous", "web-programming"]
keywords = ["io", "async", "non-blocking", "zip", "archive"]

[dependencies]
futures-util = { version = "0.3", features = ["io"], optional = true }
tokio = { version = "1.17", default-features = false, features = ["io-util"], optional = true }
crc32fast = "1.2"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "server", "stream"] }

[features]
futures-async-io = ["futures-util"]
tokio-async-io = ["tokio"]
chrono-datetime = ["chrono"]

[[example]]
name = "futures"
path = "examples/futures.rs"
required-features = ["futures-async-io", "chrono-datetime"]

[[example]]
name = "fs"
path = "examples/fs.rs"
required-features = ["tokio-async-io", "chrono-datetime"]

[[example]]
name = "hyper"
path = "examples/hyper.rs"
required-features = ["tokio-async-io", "chrono-datetime"]

[package.metadata.docs.rs]
features = ["tokio-async-io", "chrono-datetime"]
